added flag -o to tls